fixing contrast issue

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ body{
 
 .navbar-main-item >*{
   text-decoration: none;
-  color:rgb(45, 45, 105);
+  color:rgb(0, 0, 12);
 }
 
 .navbar-main-item:nth-child(5){
